@@ -2,7 +2,8 @@ SUBDIRS = document view app console data filelist fileselector mainwindow pics s
 EXTRA_DIST = piper AUTHORS COPYING ChangeLog NEWS README TODO
 
 messages: rc.cpp
+#	perl ./preparesyntax >kantsyntax.cc
 	$(XGETTEXT) `find . -name "*.cpp"` -o $(podir)/kant.pot
-
+#	rm -f kantsyntax.cc
 rc.cpp:
 	$(EXTRACTRC) *.rc *.ui */*.rc */*.ui */*/*.rc */*/*.ui > rc.cpp
