@@ -1,6 +1,6 @@
 
 noinst_LTLIBRARIES = libkantapp.la
-libkantapp_la_SOURCES = kantapp.cpp
+libkantapp_la_SOURCES = kantapp.cpp kantappIface.skel
 libkantapp_la_METASOURCES = AUTO
 
 INCLUDES= $(all_includes)
