@@ -1,3 +1,10 @@
+2001-03-22 Joseph Wenninger <jowenn@bigfoot.com>
+        * single / multi instance mode configurable
+          Cullmann's -n option forces a new instance
+          Otherwise it uses the configuration from
+          the settings dialog. At the moment -n is
+          default start option
+
 2001-03-21 Christoph Cullmann <crossfire@babylon2k.de>
         * QPopupMenu for filelist
 
